--- a/intro.html
+++ b/intro.html
@@ -520,7 +520,7 @@
 
 		   	<div class="box4-5"  style="display:inline-block;">
 		    <p>점심시간, 동료들과 커피한잔의 여유처럼<br>
-			햇살을 맞으며 반차쓰고 집가는 길의 설렘처럼
+			햇살을 맞으며 반차쓰고 집가는 길의 설렘처럼<br>
 			퇴근 후 마시는 맥주 한캔의 짜릿함처럼
 			<p>
 		    </div>
