--- a/bogoo.html
+++ b/bogoo.html
@@ -539,8 +539,7 @@
 
 			<div class="box6-3"><div class="box6-4"><div class="box6-5"><iframe style="margin: 18px" width="1500" height="845" src="https://www.youtube.com/embed/5PXZertQePY?start=1397&end=1450" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="marquee"><p style="font-size: 165px; opacity: 50%; position: relative; top: -30px">#간단 #재미 #줄임말 #신조어</p></div>
-			<div class="box6-6 kor500"><p>“중요한 것은 이 세대의 줄임말들은 그 범위가 무한대로 확장되면서, 기존의 모든 단어에 급속하게 영향을 미치고 있다는 것이다. 그리고 이러한 줄임말은 단순히 그들만이 공유하는 문화를 넘어 언어에 영향을 미치고 있다. 심지어 이제는 한국인뿐만 아니라 외국인들도 한국어 줄임말을 배우고 익히는 시대가 되었다.”  <90년생이 온다> </p></div>
-
+			<div class="box6-6 kor500"><p>“중요한 것은 이 세대의 줄임말들은 그 범위가 무한대로 확장되면서, 기존의 모든 단어에 급속하게<br>영향을 미치고 있다는 것이다. 그리고 이러한 줄임말은 단순히 그들만이 공유하는 문화를 넘어 언어에 영향을 미치고 있다. 심지어 이제는 한국인뿐만 아니라 외국인들도 한국어 줄임말을 배우고 익히는<br>시대가 되었다.”  <90년생이 온다> </p></div>
 			</div></div></div>
 			<div class="ml16 kor500">요 즘 &emsp;애 들 은 &emsp;무 슨 &emsp;생 각 일 까 ?</div>
 
