--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>회사가기 시러!</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 
 	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 	 	font-family: 'Do Hyeon', sans-serif;
