--- a/nep.html
+++ b/nep.html
@@ -59,7 +59,7 @@
 
 
 
-	    .sec3 {position: relative; height:600px; background-color: #fbf5eb; border: 0px solid red;}			    
+	    .sec3 {position: relative; height:600px; background-color: #fbf5eb; border: 0px solid red;  margin-bottom: 394px;}			    
 
 
 		
@@ -256,6 +256,30 @@
    		</div>
 
 		</section>
+			
+		 <footer class="fixed-footer">
+      <div class="footer-left">
+          <img src="footer.png">
+          <p>Taeyu Kim<br>
+            hjk3886@gmail.com<br>
+            insta_@taetae__yam
+          </p>
+
+          </h1>
+      </div>
+
+      <div class="footer-right">
+
+      <h1>일은 하고 싶지만, 회사는 가기 싫은 Z세대의 이야기</h1>        
+          <p>빠르게 변하는 세상에서  같이 일하는 동료이자, 앞으로 시장을 주도할 현세대를 이해하려는 노력은 모두의 생존을 위해 필요합니다. 우리가 맞이할 직장에서 새로운 세대와 함께 생존하기 위한 가이드이자 우리의 생각을 이야기하려 합니다. 일은 하고 싶지만, 회사는 싫은 거침없는 Z세대의 행보를 만나보세요!
+          </p>
+         
+      </div>
+
+      <div class="footer-bottom">Copyright©2020.Kim Taeyu.All rights reserved.</div>
+
+
+    </footer>
 
 
 
