--- a/nep.html
+++ b/nep.html
@@ -18,7 +18,7 @@
 
 	 html, body, header, footer, nav, figure, img {box-sizing:border-box; margin: 0; padding:0;}
 
-	  .mcontain {position: relative; width:1900px; margin:0 auto; border: 1px solid blue;  overflow: hidden;}
+	  .mcontain {position: relative; width:1900px; margin:0 auto; overflow: hidden;}
 	  .mcontain2 { position: relative; width:1900px; margin:0 auto; border: 1px solid blue;  overflow: hidden;}
 	   .sec0 { position: relative; height:1600px; background: linear-gradient(180deg, #ffc502 54%, #fbf5eb 46%); z-index: 2;}
 	
